tests/paczka1/fuzzy1/65779511.err
Error in line 1: a6vlYtZ A373 25,1
Error in line 2: a6vlYtZ S121 52,9
Error in line 3: a6vlYtZ A373 65,6
Error in line 7: S121 S121 51,0
Error in line 14: UYm0Wk A373 30,5
Error in line 4: a6vlYtZ A535 39,8
Error in line 24: a6vlYtZ S484 90,5
Error in line 34: S121 S484 60,7
Error in line 35: S121 A373 34,4
